<?xml version="1.0"?>
<package format="2">
  <name>end_effector</name>
  <version>1.0.5</version>
  <description>
    End-Effector package: provides a ROS-based set of standard interfaces to command robotics end-effectors in an agnostic fashion
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="luca.muratore@iit.it">Luca Muratore</maintainer>
  <maintainer email="davide.torielli@iit.it">Davide Torielli</maintainer>
  <maintainer email="toridebraus@gmail.com">Davide Torielli</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache License 2.0</license>

  <url type="website">https://advrhumanoids.github.io/ROSEndEffectorDocs/</url>
  <url type="repository">https://github.com/ADVRHumanoids/ROSEndEffector/</url>
  <url type="bugtracker">https://github.com/ADVRHumanoids/ROSEndEffector/issues/</url>
  
  <author email="luca.muratore@iit.it">Luca Muratore</author>
  <author email="davide.torielli@iit.it">Davide Torielli</author>
  <author email="liana.bertoni@iit.it">Liana Bertoni</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>srdfdom</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>kdl_parser</depend>
    <depend>rosee_msg</depend>
    <depend>yaml-cpp</depend>
    <depend>muparser</depend>

  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
    <buildtool_depend>catkin</buildtool_depend>
  <!-- Use exec_depend for packages you need at runtime: -->
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
    <test_depend>gtest</test_depend>
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <doc_depend>doxygen</doc_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
